# tms-janus-play

./: .gitignore  LICENSE  README.md  docker-compose.9.yml  docker-compose.yml  sample.env  set-env-on-mac.sh
coturn/: Dockerfile  start_coturn.sh  turnserver.conf
doc/: janus插件.md  播放mp3插件.md  播放mp4插件.md  播放音频插件.md
ffmpeg/: .dockerignore  .env.local  .gitignore  Dockerfile  package.json  server.js
ffmpeg/config/: app.js  fs.js  log4js.js  push.js
janus/: Dockerfile  start_janus.sh
janus-9/: Dockerfile  start_janus.sh
janus/plugins/playfile/: Makefile.am  README.md  configure.ac  janus.plugin.tms.playfile.jcfg  janus_plugin_tms_playfile.c
tms-plugins/audio/: Makefile.am  README.md  configure.ac  janus.plugin.tms.audio.jcfg.sample  janus_plugin_tms_audio.c  tms_ffmpeg_audio.c  tms_ffmpeg_audio.h  tms_ffmpeg_pcma.h  tms_ffmpeg_stream.h
tms-plugins/mp3/: Makefile.am  README.md  bootstrap  configure.ac  janus_plugin_tms_mp3.c  tms_ffmpeg_mp3.c  tms_ffmpeg_mp3.h  tms_ffmpeg_pcma.h
tms-plugins/mp4/: Makefile.am  README.md  configure.ac  janus_plugin_tms_mp4.c  tms_ffmpeg_h264.h  tms_ffmpeg_mp4.c  tms_ffmpeg_mp4.h  tms_ffmpeg_pcma.h
tms-plugins/play/: Makefile.am  README.md  configure.ac  janus_plugin_tms_play.c  tms_play.c  tms_play.h  tms_play_h264.h  tms_play_pcma.h  tms_play_stream.h
tms-plugins/rtprx/: Makefile.am  janus.plugin.tms.rtprx.jcfg.template  janus_plugin_tms_rtprx.c
turn/: docker-compose.yml
turn/coturn/: Dockerfile  coturn.env  turnserver.conf
turn/redis/: Dockerfile  redis.conf
ue_client/: Dockerfile  nginx.conf  nginx.conf.template  start_nginx.sh
ue_client/src/: Makefile  Makefile.in  streamingtest.js
ue_demo/: Dockerfile  start_nginx.sh
ue_demo/src/: Makefile  Makefile.in  devicetest.html  echotest.html  index.html
ue_play/: .dockerignore  .env  Dockerfile  README.md  nginx.conf.template  package.json  start_nginx.sh  vue.config.js
ue_play/lib/: index.js  janus.es.js  tms_janus_play.js  tms_janus_play_vue.js
ue_play/public/: index.html
ue_play/src/: Audio.vue  Demo.vue  Dev.vue  Mp3.vue  Mp4.vue  audio.js  global.js  mp3.js  mp4.js  tms_play_audio.js  tms_play_mp3.js  tms_play_mp4.js
ue_player/: .env  Dockerfile  nginx.conf.template  package.json  start_nginx.sh  vue.config.js
ue_player/public/: index.html  test.webm
ue_player/src/: App.vue  Demo.vue  Dev.vue  Player.vue  demo.js  dev.js  global.js  main.js  player.js
(+27 files in other folders)
